cmake_minimum_required(VERSION 3.5)
project(bdi_ros2)

# Default to C99
if(NOT CMAKE_C_STANDARD)
  set(CMAKE_C_STANDARD 99)
endif()

# Default to C++14
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rmw REQUIRED)
find_package(rmw_implementation_cmake REQUIRED)
find_package(std_msgs REQUIRED)
find_package(rosidl_default_generators REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # uncomment the line when a copyright and license is not present in all source files
  #set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # uncomment the line when this package is not in a git repo
  #set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

add_executable(batterySensor batterySensor.cpp)
ament_target_dependencies(batterySensor rclcpp std_msgs)
rosidl_target_interfaces(batterySensor ${PROJECT_NAME} "rosidl_typesupport_cpp")

add_executable(tankSensor tankSensor.cpp)
ament_target_dependencies(tankSensor rclcpp std_msgs)
rosidl_target_interfaces(tankSensor ${PROJECT_NAME} "rosidl_typesupport_cpp")

add_executable(internalStateMonitor internalStateMonitor.cpp)
ament_target_dependencies(internalStateMonitor rclcpp std_msgs)
rosidl_target_interfaces(internalStateMonitor ${PROJECT_NAME} "rosidl_typesupport_cpp")

add_executable(goalManager goalManager.cpp)
ament_target_dependencies(goalManager rclcpp std_msgs)
rosidl_target_interfaces(goalManager ${PROJECT_NAME} "rosidl_typesupport_cpp")

add_executable(scheduler scheduler.cpp)
ament_target_dependencies(scheduler rclcpp std_msgs)
rosidl_target_interfaces(scheduler ${PROJECT_NAME} "rosidl_typesupport_cpp")

add_executable(interpreter interpreter.cpp)
ament_target_dependencies(interpreter rclcpp std_msgs)
rosidl_target_interfaces(interpreter ${PROJECT_NAME} "rosidl_typesupport_cpp")

install(TARGETS
   batterySensor
   tankSensor
   internalStateMonitor
   goalManager
   scheduler
   interpreter
   DESTINATION lib/${PROJECT_NAME}
 )

install(DIRECTORY
  launch
  DESTINATION share/${PROJECT_NAME}/
)

ament_package()
