<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>decision_making</name>
  <version>0.0.0</version>
  <description>The decision_making package</description>
  <maintainer email="dan@todo.todo">dan</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>robot_task</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>decision_making_parsing</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>robot_task</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    
    

    
    
	
  </export>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
