<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>decision_making_examples</name>
  <version>0.1.0</version>
  <description>Examples of decision_making package usage</description>
  <maintainer email="dan@cogniteam.com">Dan</maintainer>
  <maintainer email="igor@cogniteam.com">Igor Makhtes</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>random_numbers</build_depend>
  <build_depend>decision_making</build_depend>
  <build_depend>decision_making_parser</build_depend>
  <build_depend>rclcpp</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>random_numbers</exec_depend>
  <exec_depend>decision_making</exec_depend>
  <exec_depend>decision_making_parser</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <export>
  </export>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
