<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>decision_making_parser</name>
  <version>0.0.0</version>
  <description>The decision_making_parser package</description>
  <maintainer email="dan@todo.todo">dan</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <export>
    
    

    

  </export>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
